hide play button on start, color of icons, some new oiplayer features

--- a/frontend/source/less/lib/oiplayer.less
+++ b/frontend/source/less/lib/oiplayer.less
@@ -31,10 +31,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    // Other base styling
-    text-rendering: auto;
-    -webkit-text-size-adjust: 100%;
-
     position: relative;
     margin: 0;
     padding: 0;
@@ -359,6 +355,7 @@
                 pointer-events: auto;
             }
             &.loaded {
+                height: auto;
                 background-color: rgba(204, 204, 204, 1);
                 pointer-events: auto;
             }
