--- a/frontend/source/pug/video.pug
+++ b/frontend/source/pug/video.pug
@@ -14,6 +14,7 @@ append main
                     .video-background
 
                         video( 
+                            id="tmf-player"
                             poster="styles/images/lol-cat-16x9.png"
                             width="640" 
                             height="360"
