--- a/src/main/webapp/video.jspx
+++ b/src/main/webapp/video.jspx
@@ -185,6 +185,9 @@
                   <mm:maxnumber value="1" />
                   <mm:relatednodes>
                     <tmf:video width="480" height="360" poster="${poster}" id="${media}" />
+                                        
+<tmf:thumbnails number="10" width="480" />
+
                   </mm:relatednodes>
                 </mm:relatednodescontainer>
 
