--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -4,8 +4,8 @@ nav.navigation
     .container
         .row
             .col-md-4.around-xs.center-xs
-                a.nav__topics( href="#topics" data-select-topics ) Topics
-                a.nav__collections( href="#collections" data-select-collections ) Collections
+                a.nav__topics( href="#topics" data-select-overlay="topics" ) Topics
+                a.nav__collections( href="#collections" data-select-overlay="collections" ) Collections
             .col-md-4.middle-xs.center-xs
                 form.nav__search( action="list.html" )
                     label.nav__search-label( for="search" hidden ) Search
@@ -13,7 +13,7 @@ nav.navigation
                     button.nav__search-button Go
             .col-md-4.end-md.middle-xs.center-xs
                 label.select-label( for="filter" ) Filter
-                select( id="filter" name="filter" data-select-filter )
+                select( id="filter" name="filter" data-select-filter="" )
                     option( value="list.html" selected=(selected === 'all') ) All
                     option( value="article.html" selected=(selected === 'articles') ) Articles
                     option( value="videos.html" selected=(selected === 'videos') ) Videos
