--- a/src/main/webapp/content.jspx
+++ b/src/main/webapp/content.jspx
@@ -9,9 +9,9 @@
   <mm:import externid="cacheable"  />
   
   <mm:node referid="page">
-    <mm:nodeinfo type="type" id="type" write="false" />
+    <mm:nodeinfo type="type" id="nodetype" write="false" />
     <c:choose>
-      <c:when test="${type eq 'person'}">
+      <c:when test="${nodetype eq 'person'}">
         <mm:import id="page_title"><mm:field name="firstname" /> <mm:field name="sirname" /></mm:import>
       </c:when>
       <c:otherwise>
@@ -19,10 +19,14 @@
       </c:otherwise>
     </c:choose>
   </mm:node>
-  
+
+  <mm:escaper id="myfilesize" type="filesize">
+    <mm:param name="binaryPrefixes">${empty initParam['mmbase.filesize.binaryPrefixes'] ? true : initParam['mmbase.filesize.binaryPrefixes']}</mm:param>
+  </mm:escaper>
+        
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="${type}">
+      styleClass="article ${nodetype}">
     
     <jsp:attribute name="title"><mm:write referid="page_title" escape="inline" /></jsp:attribute>
     
@@ -48,66 +52,233 @@
 
     <jsp:attribute name="body">
       <mm:node referid="page">
-        <div class="ArticleContainer">
-        
-          <tmf:header-article />
-
-          <div class="ArticleContent">
-
-            <!-- All the stuff on the left of an article -->
-
-            <tmf:article-relations />
-          
-            <!-- posrel,picture -->
-            <mm:relatednodescontainer path="posrel,picture">
-              <div class="ArticleLinksContainer">
-                  <div class="ArticleLeftLine"><!-- empty --></div>
-                  <div class="ArticleLinksLabel first"><img src="${mm:link('/style/images/labels/images.gif')}" alt="Images" /></div>
+      
+        <article class="container">
+          <div class="row">
+            <div class="col-md-2"><!-- empty --></div>
+            <div class="col-md-8">
+              <div class="article">
+                <div class="content-type">${nodetype}</div>
+                <h2 class="title">${page_title}</h2>
+                <div class="content-info">
+                  
+                  <!-- image of (first) author -->
+                  <mm:hasrelationmanager sourcemanager="$nodetype" destinationmanager="person" role="author">
+                    <mm:relatednodescontainer type="person" role="author" searchdirs="destination">
+                      <mm:maxnumber value="1" />
+                      <mm:relatednodes>
+                        <mm:link page="content">
+                          <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                          <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                          
+                          <mm:relatednodescontainer type="picture" role="posrel" searchdirs="destination">
+                            <mm:maxnumber value="1" />
+                            <mm:relatednodes>
+                              <div class="content-info__image">
+                                <a href="${_}"><mm:image mode="img" width="240" height="240" crop="middle" /></a>
+                              </div>
+                            </mm:relatednodes>
+                          </mm:relatednodescontainer>
+                          
+                        </mm:link>
+                      </mm:relatednodes>
+                    </mm:relatednodescontainer>
+                  </mm:hasrelationmanager>
+                  
+                  <div class="content-info__text">
+                    <div class="author"> 
+                      <mm:hasrelationmanager sourcemanager="$nodetype" destinationmanager="person" role="author">
+                        <mm:relatednodescontainer type="person" role="author" searchdirs="destination">
+                          <mm:relatednodes>
+                            <mm:link page="content">
+                              <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                              <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                              <a href="${_}"><mm:field name="firstname" /> <mm:field name="sirname" /></a>
+                              <mm:last inverse="true">, </mm:last>
+                            </mm:link>
+                          </mm:relatednodes>
+                        </mm:relatednodescontainer>
+                      </mm:hasrelationmanager>
+                    </div>
+                    
+                    <div class="date">
+                      <mm:field name="created"><mm:time format="MMMM dd, yyyy" /></mm:field>
+                    </div>
+                    <mm:relatednodescontainer type="keyword" searchdirs="destination" role="related">
+                      <ul class="tags">
+                        <mm:relatednodes>
+                          <mm:link page="pages">
+                            <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                            <mm:frameworkparam name="page">search</mm:frameworkparam>
+                            <mm:frameworkparam name="keyword"><mm:field name="keyword" escape="url" /></mm:frameworkparam>
+                            <li class="tag">
+                              <a href="${_}"><mm:field name="keyword" /></a><mm:last inverse="true">, </mm:last>
+                            </li>
+                          </mm:link>
+                        </mm:relatednodes>
+                      </ul>
+                    </mm:relatednodescontainer>
+                  </div>
+                  <div class="content-info__related">
+                    <ul>
+                    
+                      <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#files">${_} files</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="url" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#links">${_} links</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="video" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#videos">${_} videos</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer path="posrel,picture">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#images">${_} images</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      
+                    </ul>
+                  </div>
+                </div>
+                
+                <mm:field name="intro" escape="paragraph(intro)" />
+                
+                <c:choose>
+                  <c:when test="${nodetype eq 'person'}">
+                    <mm:field name="biografy" escape="paragraph" />
+                  </c:when>
+                  <c:otherwise>
+                    <mm:field name="body" escape="paragraph" />
+                  </c:otherwise>
+                </c:choose>
+                
               </div>
+            </div>
+            <div class="col-md-2"><!-- empty --></div>
+          </div>
+        
+          <aside>
 
-              <mm:sortorder field="posrel.pos" />
-              <mm:relatednodes>		
-
-				<div class="ArticleImageContainer">
-				  <div class="ArticleImageLabel">
-					<p class="filelabel"><mm:field name="title" /></p>
-                	<mm:link page="/picture" referids="_node@pic">
-					  <a href="${_}"><mm:image mode="img" template="s(414)" /></a>
-					</mm:link>
-					<!-- <a title="Leaks" href="http://www.tacticalmediafiles.net/picture.jsp?objectnumber=48386" target="_new"><img src="./artikel2_files/wikilogo_square.jpg" /></a> -->
-				  </div>
-				</div>
-
-              </mm:relatednodes>
-              <div class="ArticleImage"><img src="${mm:link('/style/images/x.gif')}" alt="X" /></div>
+            <!-- url -->
+            <mm:relatednodescontainer role="related" type="url" searchdirs="destination">
+              <mm:size>
+                <mm:isgreaterthan value="0">
+                  <div class="content-related row" id="links">
+                    <div class="col-md-2"><!-- empty --></div>
+                    <div class="col-md-8">
+                      <h4 class="content-related__title">Links</h4>
+                      <ul class="content-related__list">
+                      <mm:relatednodes>
+                        <li>
+                          <a href="${_node.url}"><mm:field name="title" /></a>
+                          <mm:field name="description"><mm:isnotempty>
+                            <span class="description"><mm:write /></span>
+                          </mm:isnotempty></mm:field>
+                        </li>
+                      </mm:relatednodes>
+                      </ul>
+                    </div>
+                    <div class="col-md-2"><!-- empty --></div>
+                  </div>
+                </mm:isgreaterthan>
+              </mm:size>
             </mm:relatednodescontainer>
-            <!-- EOF posrel,picture -->
 
-            <!-- End of Left Stuff -->
-          
+            <!-- files -->
+            <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
+              <mm:size>
+                <mm:isgreaterthan value="0">
+                  <div class="row content-related" id="files">
+                    <div class="col-md-2"><!-- empty --></div>
+                    <div class="col-md-8">
+                      <h4 class="content-related__title">Files</h4>
+                      <ul class="content-related__list">
+                      <mm:relatednodes>
+                        <mm:attachment>
+                          <li>
+                            <a href="${_}"><mm:field name="title" /></a>
+                            <span class="filelabel"><mm:field name="filename" />, <mm:field name="size" escape="myfilesize" /></span>
+                          </li>
+                        </mm:attachment>
+                      </mm:relatednodes>
+                      </ul>
+                    </div>
+                    <div class="col-md-2"><!-- empty --></div>
+                  </div>
+                </mm:isgreaterthan>
+              </mm:size>
+            </mm:relatednodescontainer>
         
-            <div style="padding-left: 280px ;">
-                <p class="Text">
+            <!-- video -->
+            <mm:relatednodescontainer role="related" type="video" searchdirs="destination">
+              <mm:size>
+                <mm:isgreaterthan value="0">
+                  <div class="content-related row" id="videos">
+                    <div class="col-md-10 col-md-offset-2"> 
+                      <h4 class="content-related__title __video">Video</h4>
+                    </div>
+                  </div>
+                  <div class="content-related row">
+                    <ul>
+                      <mm:relatednodes>
+                        <mm:link page="media">
+                          <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                          <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                          <a href="${_}" class="content-related__image">
+                            <mm:relatednodes type="picture" max="1">
+                              <mm:import id="image" reset="true"><mm:image mode="url" width="200" height="150" /></mm:import>
+                            </mm:relatednodes>
+                            <mm:notpresent referid="image">
+                              <mm:import id="image" reset="true">${mm:link('/style/images/video-003.gif')}</mm:import>
+                            </mm:notpresent>
+                            <div class="content-related__image-bg" style="background-image:url(${image})"></div>
+                            <span><mm:field name="title" escape="inline" /></span>
+                          </a>
+                        </mm:link>
+                      </mm:relatednodes>
+                    </ul>
+                  </div>
+                </mm:isgreaterthan>
+              </mm:size>
+            </mm:relatednodescontainer>
 
-				  <c:choose>
-					<c:when test="${type eq 'person'}">
-	                  <mm:field name="biografy" escape="paragraph(Text)" />
-					</c:when>
-					<c:otherwise>
-	                  <mm:field name="body" escape="paragraph(Text)" />
-					</c:otherwise>
-				  </c:choose>
-                </p>
-            </div><!-- EOF .Text -->
+            <mm:relatednodescontainer path="posrel,picture">
+              <mm:size>
+                <mm:isgreaterthan value="0">
 
-            <div style="text-align: right; margin-top: 15px ;"><img src="${mm:link('/style/images/x-blue.gif')}" alt="X" /></div>
-            <div class="clearBoth"><!-- empty --></div>
-            <div class="clearBoth"><!-- empty --></div>
-            <div class="ArticleSpacer"><!-- empty --></div>
-        
-          </div><!-- EOF .ArticleContent -->
+                  <mm:sortorder field="posrel.pos" />
+                  <mm:relatednodes>		
 
-        </div><!-- EOF .ArticleContainer -->
+                    <div class="ArticleImageContainer">
+                        <mm:field name="title" />
+                        <mm:link page="/picture" referids="_node@pic">
+                          <a href="${_}"><mm:image mode="img" template="s(414)" /></a>
+                        </mm:link>
+                    </div>
+
+                  </mm:relatednodes>
+                </mm:isgreaterthan>
+              </mm:size>
+            </mm:relatednodescontainer>
+
+            
+          </aside>
+        </article>
+                
       </mm:node>
     </jsp:attribute>
   </tmf:html>
