more related content types, ajax load selected topic

--- a/frontend/source/less/modules/article.less
+++ b/frontend/source/less/modules/article.less
@@ -20,6 +20,13 @@
         }
     }
     
+    .article-image {
+        img {
+            width: 100%;
+            margin: 1rem 0 3rem 0;
+        }
+    }
+
     p.intro {
         .font(large);
         color: @color-grey--30;
