--- a/frontend/source/less/modules/content-info.less
+++ b/frontend/source/less/modules/content-info.less
@@ -69,6 +69,7 @@
             }
         }
         .content-info__text {
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
