--- a/frontend/source/pug/layout/footer.pug
+++ b/frontend/source/pug/layout/footer.pug
@@ -1,8 +1,8 @@
 .footer
     .container
         .row
-            .col-md-2
-            .col-md-3.center-xs.start-md
+            .col-sm-2
+            .col-sm-3.center-xs.start-md
                 .footer-inner
                     strong Tactical Media Files
                     ul.footer__navigation
@@ -14,7 +14,7 @@
                             a.footer__link( href="#" ) Contact
                         li
                             a.footer__link( href="#" ) Blog
-            .col-md-3.center-xs.start-md
+            .col-sm-3.center-xs.start-md
                 .footer-inner
                     strong Filter archive
                     ul.footer__navigation
@@ -26,7 +26,7 @@
                             a.footer__link( href="#" ) Pictures
                         li
                             a.footer__link( href="#" ) Files
-            .col-md-3.center-xs.start-md
+            .col-sm-3.center-xs.start-md
                 .footer-inner
                     strong Browse archive
                     ul.footer__navigation
@@ -34,4 +34,4 @@
                             a.footer__link( href="#" ) By collection
                         li
                             a.footer__link( href="#" ) By topic
-            .col-md-1
+            .col-sm-1
