--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -39,7 +39,7 @@ html( lang="en" )
             footer.page-layout__footer
                 include footer
 
-            .overlay( data-select-results )
+            .overlay( data-select-results="overlay" )
                 include overlay
             
         script( src=config.paths.assets.js+"/main.js" )
