--- a/frontend/source/less/modules/content-related.less
+++ b/frontend/source/less/modules/content-related.less
@@ -17,16 +17,40 @@
 
     .content-related__list {
         font-family: @font-tertiary;
-        .font(small);
+        
+        &.__campaigns,
+        &.__events,
+        &.__files,
+        &.__links,
+        &.__persons {
+            a { 
+                .font(medium);
+                color: @color-secondary;
 
-        a { color: @color-secondary; }
+                &:link,
+                &:visited {
+                    color: @color-secondary;                    
+                }
+            }
+        }
 
         &.__images,
         &.__video {
             li {
                 display: inline;
                 float: left;
+                a { 
+                    .font(small);
+                    color: @color-secondary; 
+                }
+
             }
+        }
+
+        .content-related__link-description {
+            display: block;
+            font-family: @font;
+            color: @color-grey--30;
         }
 
         .content-related__image {
