--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -48,7 +48,20 @@ append main
                                     li
                                         a( href="#images" ) 4 images
 
+            .col-md-2
+
+        .row
+            .col-md-3
+                a.article-image( href="#images" )
+                    img( src="styles/images/Share_the_Security.jpg" )
+            .col-md-7
+
                     p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
+
+            .col-md-2
+        .row
+            .col-md-2
+            .col-md-8
 
                     p This text is set in 21px, line height 33px. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim #[a(href="#") veniam], quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     
@@ -57,7 +70,6 @@ append main
                     h3 Et harum quidem rerum facilis est et expedita distinctio 
                     p Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cumque nihil. 
 
-            .col-md-2
         
         aside
             #links.content-related.row
@@ -65,20 +77,22 @@ append main
                 .col-md-8
 
                     h4.content-related__title Links
-                    ul.content-related__list
+                    ul.content-related__list.__links
                         li
                             a( href="https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/" ) https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/
                         li
                             a( href="https://nrapress.org" ) https://nrapress.org
+                            span.content-related__link-description Description of this link
                 .col-md-2
             
             #files.content-related.row
                 .col-md-2
                 .col-md-8
                     h4.content-related__title Files
-                    ul.content-related__list
+                    ul.content-related__list.__files
                         li
                             a( href="#" ) filename.zip
+                            span.content-related__link-description Some extra information
                 .col-md-2
 
 
